--- a/.github/workflows/tf_checks.yml
+++ b/.github/workflows/tf_checks.yml
@@ -30,7 +30,7 @@ jobs:
       # Step 4: Run tflint
       - name: Run tflint
         run: tflint
-        working-directory: ./path-to-terraform-files  # Update if your Terraform files are not in the root
+        working-directory: infra_app  # Update if your Terraform files are not in the root
 
       # Optional Step 5: Terraform Format Check
       - name: Terraform Format Check
