--- a/.github/workflows/infra_deployment.yml
+++ b/.github/workflows/infra_deployment.yml
@@ -27,7 +27,7 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files
     - name: Terraform Init
       working-directory: infra_app
-      run: terraform init
+      run: terraform init -backend-config="bucket=${{ secrets.GCS_TF_BUCKET }}"
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
 
