updating  secrets for workflow

--- a/.github/workflows/infra_deployment.yml
+++ b/.github/workflows/infra_deployment.yml
@@ -38,6 +38,7 @@ jobs:
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         TF_VAR_gcs_tf_bucket: ${{ secrets.GCS_TF_BUCKET }}
+        TF_VAR_project_id: ${{ secrets.project_id}}
 
      # On push to main, build or change infrastructure according to Terraform configuration files     
     - name: Terraform Apply
@@ -46,3 +47,4 @@ jobs:
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         TF_VAR_gcs_tf_bucket: ${{ secrets.GCS_TF_BUCKET }}
+        TF_VAR_project_id: ${{ secrets.project_id}}
