--- a/.github/workflows/tf_checks.yml
+++ b/.github/workflows/tf_checks.yml
@@ -21,6 +21,13 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.5.0  # Adjust the version if necessary
+          
+      # Initialize a new or existing Terraform working directory by creating initial files
+      - name: Terraform Init
+        working-directory: infra_app
+        run: terraform init -backend-config="bucket=${{ secrets.GCS_TF_BUCKET }}"
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
 
       # Step 3: Install tflint
       - name: Install tflint
